# GhomalaAPI

./: Dockerfile  app.py  data.py  docker-compose.yaml  pyproject.toml
